--- a/css/style.css
+++ b/css/style.css
@@ -1,162 +1,150 @@
-*, *:before, *:after {
-  box-sizing: border-box;
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
 
 }
 
 body {
-  background-color:#433D3D;
+    background-color: #433D3D;
+    font-size: 30;
+    font-family: 'Roboto', sans-serif
 }
 
 .container {
-  margin: 0 auto;
-  position:relative;
+  margin: auto;
   width: 375px;
-  height:667px;
+  height: 667px;
 }
+
 
 .status-bar {
+    position:fixed;
+    vertical-align: bottom;
+
+}
+
+.map {
+  margin-top: 108px;
   vertical-align: bottom;
 
 }
 
-.navigation{
-  height:44px;
-  width:100%;
-  background-color:#DB2C9F;
+.station-title {
+  width: 375px;
+  padding:10px;
+  text-align: center;
+  background-color: #007AFF;
+  font-size: 1.3em;
 
 }
 
-.back-arrow {
-  float:left;
-  padding-left: 2px;
-  position:relative;
-  margin-top: 5px;
-  margin-left: 5px;
+.bus-line {
 
-}
-
-.nav-title {
-  float:left;
-  padding-left: 85px;
-  padding-top: 3px;
-  font-size: .6em;
-  margin-top: 10px;
-
-}
-.bus-line{
-
-  background-color: #000000;
-  padding-top: 10px;
-  padding-bottom: 20px;
-  border-bottom:2px solid #E5E5E5;
-  vertical-align: bottom;
-
-  box-sizing:border-box;
+    width: 375px;
+    background-color: #000000;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    border-bottom: 2px solid #E5E5E5;
+    vertical-align: bottom;
+    box-sizing: border-box;
 
 }
 
 .eastbound-bus {
-  position:relative;
-  float:left;
-  background-color: #151FFF;
-  padding:6px 15px 5px 15px;
-  text-align: center;
-  margin-left: 17px;
+
+    float: left;
+    background-color: #151FFF;
+    padding: 6px 15px 5px 15px;
+    text-align: center;
+    margin-left: 17px;
 
 }
 
 .direction {
 
-  display: inline-block;
-  position:relative;
-  padding:6px 22px 3px 22px;
-  font-size: 1.2em;
-  text-align: center;
+    display: inline-block;
+    padding: 6px 70px 3px 22px;
+    font-size: 1.2em;
+    text-align: center;
 
 }
 
-.frequency {
-  white-space: nowrap;
-  display:inline-block;
-  padding-left:22px;
-  padding-right: 35px;
-  padding-top: 15px;
+.eta {
+    float: right;
+    margin-right: 17px;
+    text-align: center;
+    line-height: 33px;
+}
 
+
+.frequency {
+    text-align: left;
+    margin-top: 15px;
+    margin-left: 19px;
+    padding-bottom: 10px;
 
 }
 
 .location {
-  white-space: nowrap;
-  display:inline-block;
-  padding-left:22px;
-  padding-top: 10px;
-
-
-}
-.ETA {
-  position: relative;
-  float:right;
-  text-align: center;
-  padding-right:17px;
-  font-weight: bold;
+    text-align: left;
+    margin-top: 5px;
+    margin-left: 19px;
 
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
-  color: white;
-  font-size: 1.8em;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 2.5em;
 
 }
 
 h2 {
-  font-family: 'Roboto', sans-serif;
-  color: white;
-  font-weight: bold;
-  font-size: 1em;
-  letter-spacing: .8px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
 }
 
 h3 {
-  font-family: 'Roboto', sans-serif;
-  color: white;
-  font-weight: 200;
-  font-size: .9em;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: .9em;
+    font-weight: 300;
 
 }
 
-h4 {
-  font-family: 'Roboto', sans-serif;
-  color: white;
-  font-weight: 200;
-  font-size: .4em;
-}
+
 
 .northbound-bus {
-  position:relative;
-  float:left;
-  background-color: #7B0FFF;
-  padding:6px 15px 5px 15px;
-  text-align: center;
-  margin-left: 17px;
+    float: left;
+    background-color: #7B0FFF;
+    padding: 6px 15px 5px 15px;
+    text-align: center;
+    margin-left: 17px;
+
 
 }
 
 .southbound-bus {
-  position:relative;
-  float:left;
-  background-color: #E07F00;
-  padding:6px 15px 5px 15px;
-  text-align: center;
-  margin-left: 17px;
+    float: left;
+    background-color: #E07F00;
+    padding: 6px 15px 5px 15px;
+    text-align: center;
+    margin-left: 17px;
 
 }
+
 .reroute-bus {
+    float: left;
+    background-color: #676767;
+    padding: 6px 15px 5px 15px;
+    text-align: center;
+    margin-left: 17px;
+
+}
+.tab-bar {
   position:relative;
-  float:left;
-  background-color: #676767;
-  padding:6px 15px 5px 15px;
-  text-align: center;
-  margin-left: 17px;
 
 }
